2009-09-18  Alberto Garcia  <agarcia@igalia.com>

	* src/dbus.c:
	Use the gdk_threads_* API to install all idle handlers.

2009-09-18  Alberto Garcia  <agarcia@igalia.com>

	* src/audio.c
	(+audio_started_cb_handler, +gst_eos_handler, bus_call):
	Run the GStreamer EOS and state changed handlers from the main
	loop.

2009-09-18  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.c
	(+controller_play_radio_by_url_idle)
	(controller_play_radio_by_url_thread)
	(controller_play_radio_by_url_cb):
	Use a thread to make the HTTP request for setting a new radio
	station, but do everything else in the main loop.

2009-09-18  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.c
	(+start_playing_get_pls_idle, start_playing_get_pls_thread):
	Use an idle handler to start/stop playing after retrieving a new
	playlist.
	(controller_start_playing_cb):
	Pass the 'discovery mode' setting directly to the new thread.

2009-09-18  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.c
	(+add_to_playlist_idle, add_to_playlist_thread):
	Use an idle handler to update the UI after adding a track to the
	user's playlist.

2009-09-18  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.c
	(+show_banner_idle, download_track_thread, tag_track_thread)
	(recomm_track_thread):
	Use an idle handler to show information banners.

2009-09-18  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.c
	(+set_album_cover_idle, set_album_cover_thread):
	Set the album cover in the main window using an idle handler.
	(controller_show_cover):
	Don't create a thread to download the album cover if it's already
	available.

2009-09-14  Alberto Garcia  <agarcia@igalia.com>

	* src/uimisc.c (usercfg_add_account_settings):
	Document the new 'service' configuration option.

	* src/uimisc.c
	(usercfg_add_download_settings)
	* src/controller.c
	(check_session_thread, check_session):
	Change references to Last.fm for more generic messages.

	* README
	* debian/control.*
	* vagalume.1: